DT-1496 Fixes mobile menu overlapping body

--- a/src/client/components/lender-match/lender-match.scss
+++ b/src/client/components/lender-match/lender-match.scss
@@ -1,3 +1,9 @@
+@media (max-width: 767px) {
+    body {
+        margin-top: 16vw;
+    }
+}
+
 //LINC BUTTONS
 .backBtn{
   width: 140px;
