--- a/src/client/styles/success-page/confirm-section.scss
+++ b/src/client/styles/success-page/confirm-section.scss
@@ -1,10 +1,17 @@
 @import "../buttons";
 @import "../atoms/grid";
+@media (max-width: 767px) {
+    body {
+        margin-top: 16vw;
+    }
+}
+
 .section {
     width: 84vw;
     margin: 0 auto 70px;
     left: 1.4vw;
     position: relative;
+    top: 30px;
     @include grid-container;
     .resource {
         @include grid-column(12);
@@ -60,6 +67,7 @@
         h1 {
             font-size: 56px;
             margin-bottom: 18px;
+            margin-top: 50px;
         }
         h4 {
             font-size: 21px;
@@ -67,7 +75,7 @@
         }
         h5 {
             font-size: 18px;
-            margin-bottom: 36px;
+            margin-bottom: 125px;
         }
         p {
             font-size: 18px;
@@ -84,6 +92,7 @@
         h1 {
             font-size: 75px;
             margin-bottom: 30px;
+            margin-top: 50px;
         }
         h4 {
             font-size: 24px;
@@ -91,7 +100,7 @@
         }
         h5 {
             font-size: 24px;
-            margin-bottom: 50px;
+            margin-bottom: 125px;
         }
         p {
             font-size: 18px;
